--- a/prelab_1/Objects/prelab_1.build_log.htm
+++ b/prelab_1/Objects/prelab_1.build_log.htm
@@ -21,18 +21,18 @@ Target DLL:      UL2CM3.DLL V1.164.14.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-E:\projects\ee304\prelab-1\prelab-1.uvprojx
-Project File Date:  02/12/2025
+E:\projects\3-2\EE304\prelab_1\prelab_1.uvprojx
+Project File Date:  02/20/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'C:\Users\Tolgahan\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target_1'
-assembling main.s...
+assembling task2.s...
 assembling startup_stm32f10x_ld.s...
 compiling system_stm32f10x.c...
 linking...
-Program Size: Code=1288 RO-data=252 RW-data=0 ZI-data=1632  
-".\Objects\prelab-1.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=1296 RO-data=252 RW-data=0 ZI-data=1632  
+".\Objects\prelab_1.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,10 +59,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE@6.1.0
 
    * Component: Keil::Device:Startup@1.0.0
-      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
       Source file:   Device/Source/ARM/startup_stm32f10x_ld.s
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
+      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
